--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,10 @@
     <title>Chatbot</title>
 </head>
 <body>
+    <h1>Login system</h1>
+    <a href="{{url_for('login')}}">Login page</a><br>
+    <a href="{{url_for('register')}}">register page</a>
+    
 <div class="container">
     <div class="chatbox">
         <div class="chatbox__support">
