--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
             <div class="chatbox__footer">
                 <input type="text" placeholder="Write a message...">
                 <button class="chatbox__send--footer send__button">Send</button>
+                <button id="voice"class="chatbox__send--footer send__button">mic</button>
             </div>
         </div>
         <div class="chatbox__button">
@@ -41,6 +42,7 @@
         $SCRIPT_ROOT = {{ request.script_root|tojson }};
     </script>
     <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
+    <script src="voice.js"></script>
 
 </body>
 </html>
