--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Login page</h1><br>
+    <form method="POST" action="">
+        {{form.hidden_tag()}}
+        {{form.username}}
+        {{form.password}}
+        {{form.submit}}
+    </form>
     <a href="{{url_for('register')}}">Dont have account? sign up </a><br>
     <a href="{{url_for('login')}}">Already have a account? sign in</a><br>
 </body>
