--- a/templates/register.html
+++ b/templates/register.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>Register page</h1>
+
+    <form method="POST" action="">
+        {{form.hidden_tag()}}
+        {{form.username}}
+        {{form.password}}
+        {{form.submit}}
+    </form>
+
 </body>
 </html>
